--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,8 +12,10 @@
     "eas:dev": "eas build --platform ios --profile development"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.17.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.8",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.20",
     "expo-asset": "^12.0.9",
     "expo-constants": "~18.0.10",
@@ -22,6 +24,7 @@
     "expo-image": "^3.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.8",
