--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,12 +15,14 @@
     "@clerk/clerk-expo": "^2.17.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/native": "^7.1.8",
+    "@shopify/react-native-skia": "^2.3.7",
     "dotenv": "^17.2.3",
     "expo": "~54.0.20",
     "expo-asset": "^12.0.9",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "^6.0.16",
     "expo-font": "~14.0.9",
+    "expo-haptics": "^15.0.7",
     "expo-image": "^3.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
@@ -36,6 +38,7 @@
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-skia-gesture": "^0.4.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
