--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,7 +4,11 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.10.3"
+    "@clerk/backend": "^2.19.0",
+    "@hono/node-ws": "^1.2.0",
+    "dotenv": "^17.2.3",
+    "hono": "^4.10.3",
+    "mongodb": "^6.20.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
