--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.17.1",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.8",
     "@shopify/react-native-skia": "^2.3.7",
     "dotenv": "^17.2.3",
@@ -24,6 +25,7 @@
     "expo-font": "~14.0.9",
     "expo-haptics": "^15.0.7",
     "expo-image": "^3.0.10",
+    "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-secure-store": "^15.0.7",
