repo cleanup - remove unused files - started linted - more to be done

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web",
     "prebuild": "expo prebuild",
     "eas": "eas build --platform ios",
-    "eas:dev": "eas build --platform ios --profile development"
+    "eas:dev": "eas build --platform ios --profile development",
+    "format": "biome format --write --reporter=rdjson",
+    "lint": "biome lint --write --reporter=rdjson",
+    "imports": "biome check --write --reporter=rdjson"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.17.1",
