--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,10 @@
   "name": "backend",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "seed": "bun run src/scripts/seed-recipes.ts"
+    "seed": "bun run src/scripts/seed-recipes.ts",
+    "format": "biome format --write --reporter=rdjson",
+    "lint": "biome lint --write --reporter=rdjson",
+    "imports": "biome check --write --reporter=rdjson"
   },
   "dependencies": {
     "@clerk/backend": "^2.19.0",
