90 percent of linting errors fixed in apps/backend/src/services. Some still remain that need to be solved. -apps/backend/src/routes is still in really bad shape

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,9 +10,9 @@
     "prebuild": "expo prebuild",
     "eas": "eas build --platform ios",
     "eas:dev": "eas build --platform ios --profile development",
-    "format": "biome format --write --reporter=rdjson",
-    "lint": "biome lint --write --reporter=rdjson",
-    "imports": "biome check --write --reporter=rdjson",
+    "format": "biome format --writen",
+    "lint": "biome lint --writen",
+    "imports": "biome check --writen",
     "test": "jest"
   },
   "dependencies": {
