Phases 2-3 are not complete. Moving on to phases 4-6

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -50,7 +50,16 @@ DATA_RETENTION_DAYS=90
 ENABLE_AUDIT_LOG=true
 
 # ============================================
+# LOGGING CONFIGURATION
+# ============================================
+# Log level: error, warn, info, debug
+LOG_LEVEL=info
+# Directory for log files (production only)
+LOG_DIR=./logs
+# Service name for logging
+SERVICE_NAME=dindin-backend
+
+# ============================================
 # MONITORING (Optional)
 # ============================================
 SENTRY_DSN=your_sentry_dsn_if_using_sentry
-LOG_LEVEL=info
