--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,13 +7,20 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build": "expo export --platform web",
+    "build:web": "expo export --platform web",
     "prebuild": "expo prebuild",
     "eas": "eas build --platform ios",
     "eas:dev": "eas build --platform ios --profile development",
-    "format": "biome format --writen",
-    "lint": "biome lint --writen",
-    "imports": "biome check --writen",
-    "test": "jest"
+    "check-types": "tsc --noEmit",
+    "format": "biome format --write",
+    "lint": "biome lint --write",
+    "imports": "biome check --write",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "test:verbose": "NODE_ENV=test jest --verbose",
+    "test:ci": "NODE_ENV=test jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.17.1",
@@ -52,10 +59,12 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "jest": "^30.2.0",
+    "jest-expo": "~52.0.3",
     "react-test-renderer": "19.1.0",
     "ts-jest": "^29.4.5",
     "typescript": "~5.9.2"
