--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -63,6 +63,7 @@
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "eslint-plugin-testing-library": "^7.13.3",
     "jest": "^30.2.0",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "19.1.0",
